# lv_camper_gui

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  lv_conf.h  toolchain-arm64.cmake
src/: main.c  main.h
src/data/: data_actions.c  data_actions.h  data_manager.c  data_manager.h  sensor_parsers.c  sensor_parsers.h  sensor_types.h
src/lib/: http_client.c  http_client.h  logger.c  logger.h  lv_sdl_disp.c  lv_sdl_disp.h  mem_debug.c  mem_debug.h  wifi.c  wifi.h
src/ui/: analytics_tab.c  analytics_tab.h  camper_data.c  camper_data.h  energy_temp_charts.c  energy_temp_charts.h  energy_temp_panel.c  energy_temp_panel.h  logs_tab.c  logs_tab.h  lv_awesome_16.c  lv_awesome_16.h  status_column.c  status_column.h  status_tab.c  status_tab.h  ui.c  ui.h
src/ui/charts/: battery_chart.c  battery_chart.h  solar_chart.c  solar_chart.h  temp_chart.c  temp_chart.h
